# mev-relay-rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  justfile
.github/workflows/: fmt-and-lint.yml
crates/api/: Cargo.toml  build.rs
crates/api/proto/: bidder_service.proto  retriever_service.proto  validator_service.proto
crates/api/src/: bidder_service.rs  conversion.rs  lib.rs  retriever_service.rs  validator_service.rs
crates/api/src/proto/: relay.rs
crates/app/: Cargo.toml
crates/app/src/: cli.rs  lib.rs  main.rs  relay_service.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: fork.rs  fork_name.rs  lib.rs  public_key.rs  secret_key.rs  signature.rs  signer.rs
crates/datastore/: Cargo.toml
crates/datastore/src/: storage.rs
crates/datastore/src/auctioneer/: error.rs  memory.rs  traits.rs
crates/datastore/src/auctioneer/memory/: auctioneer.rs
crates/datastore/src/storage/: error.rs  traits.rs
crates/datastore/src/storage/memory/: storage.rs
crates/entity/: Cargo.toml
crates/entity/src/: beacon_event.rs  bid_submission.rs  bid_trace.rs  blinded_block.rs  execution_payload.rs  fork.rs  head_slot.rs  lib.rs  payload_attributes.rs  proposer_duty.rs  signed_header.rs  sync.rs  types.rs  validator.rs  versioned.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: lib.rs
crates/gateway/src/beacon/: api.rs  error.rs  mod.rs
crates/gateway/src/beacon/events/: mod.rs  stream.rs
crates/gateway/src/beacon/service/: handle.rs  mod.rs
crates/gateway/src/bls/: mod.rs  public_key.rs  secret_key.rs  signature.rs  signer.rs
crates/gateway/tests/: beacon_integration.rs
crates/health/: Cargo.toml
crates/health/src/: lib.rs
crates/metrics/: Cargo.toml
crates/usecase/: Cargo.toml
crates/usecase/src/: error.rs  get_header.rs  lib.rs  register_validator.rs  submit_bid.rs  unblind_block.rs
tests/: integration.rs
