[package]
name = "relay-api"
version.workspace = true
edition.workspace = true

[build-dependencies]
tonic-build.workspace = true

[dependencies]
relay-entity.workspace = true
relay-crypto.workspace = true
relay-usecase.workspace = true
relay-datastore.workspace = true
tonic.workspace = true
prost.workspace = true
bytes.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
serde_json.workspace = true
alloy-primitives.workspace = true
ssz_types.workspace = true
typenum.workspace = true

[dev-dependencies]
tokio.workspace = true
parking_lot.workspace = true
blst.workspace = true

