[package]
name = "relay-app"
version.workspace = true
edition.workspace = true

[dependencies]
relay-crypto.workspace = true
relay-datastore.workspace = true
relay-entity.workspace = true
relay-gateway.workspace = true
relay-api.workspace = true
relay-usecase.workspace = true
relay-health.workspace = true

clap.workspace = true
futures.workspace = true
hex.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tree_hash.workspace = true
url.workspace = true
