[package]
name = "relay-entity"
version.workspace = true
rust-version.workspace = true
edition = "2021"
repository.workspace = true

[dependencies]
alloy-primitives.workspace = true
serde.workspace = true
serde_with.workspace = true
ethereum_ssz.workspace = true
ethereum_ssz_derive = "0.10"
tree_hash.workspace = true
tree_hash_derive.workspace = true
ethereum_serde_utils = "0.5"
serde_json.workspace = true

