[package]
name = "relay-entity"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
alloy-primitives.workspace = true
relay-crypto.workspace = true
serde.workspace = true
serde_with.workspace = true
ethereum_ssz.workspace = true
ethereum_ssz_derive.workspace = true
tree_hash.workspace = true
tree_hash_derive.workspace = true
ethereum_serde_utils.workspace = true
serde_json.workspace = true
ssz_types.workspace = true
typenum.workspace = true

