[package]
name = "relay-gateway"
version.workspace = true
edition.workspace = true

[dependencies]
relay-entity.workspace = true
relay-crypto.workspace = true
blst.workspace = true
rand.workspace = true
tree_hash.workspace = true
tree_hash_derive.workspace = true
reqwest.workspace = true
url.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
async-trait.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
thiserror.workspace = true
hex.workspace = true
bytes.workspace = true
alloy-primitives.workspace = true